--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 	"homepage": "https://github.com/AlfredoRamos/phpbb-ext-default-avatar",
 	"version": "0.1.0-dev",
 	"time": "2015-10-17",
-	"keywords": ["avatar", "phpbb", "extension"],
+	"keywords": ["avatar", "gravatar", "phpbb", "extension"],
 	"license": "GPL-3.0+",
 	"authors": [
 		{
