--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 	"version": "0.1.2-dev",
 	"time": "2015-10-18",
 	"keywords": ["avatar", "gravatar", "phpbb", "extension"],
-	"license": "GPL-3.0+",
+	"license": "GPL-2.0",
 	"authors": [
 		{
 			"name": "Alfredo Ramos",
