--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
 	"type": "phpbb-extension",
 	"description": "Default Avatar Extension for phpBB 3.1.x",
 	"homepage": "https://github.com/AlfredoRamos/phpbb-ext-default-avatar",
-	"version": "0.1.2-dev",
-	"time": "2015-10-18",
+	"version": "0.2.0-beta",
+	"time": "2015-10-21",
 	"keywords": ["avatar", "gravatar", "phpbb", "extension"],
 	"license": "GPL-2.0",
 	"authors": [
